# Projekt

./: CMakeLists.txt  README.md  Source.cpp  Sudoku.cpp  capturePhoto.cpp
Code/GUISource/sources/: CMakeLists.txt
Code/GUISource/sources/app/: CMakeLists.txt
Code/GUISource/sources/lib/: CMakeLists.txt  gui.cpp  gui.h
Code/logicSource/sources/: CMakeLists.txt
Final/: Data.h  Solve.cpp  Source.cpp  Sudoku.cpp  Sudoku.h  SudokuMatrix.cpp  TrainAndTest.cpp  final.h  gui.h  gui3.qrc  gui3.ui  pictureview.cpp  pictureview.h  sudokuWindow.h
Gui kompletne - do zlaczenia/: Data.cpp  gui.cpp  gui.h  main.cpp  pictureview.cpp  pictureview.h  sudokuWindow.cpp
Materialy/: Thumbs.db
Materialy/Zdjęcia/: Thumbs.db
Materialy/Zdjęcia/Najlepsza jakość/: Thumbs.db
Prototype/sources/: CMakeLists.txt
Prototype/sources/app/: CMakeLists.txt  MainApp.cpp
Prototype/sources/lib/: CMakeLists.txt  Sudoku.cpp  Sudoku.h  Sudoku1.cpp  Sudoku1.h  TrainAndTest.cpp  TrainAndTest.h  gui.cpp  gui.h
Source/: .cproject  Sudoku.cpp  Sudoku.h  SudokuMatrix.cpp  SudokuMatrix.h
SourceTest/GUISource/: main.cpp
SourceTest/logicSource/sources/: CMakeLists.txt
SourceTest/logicSource/sources/algo/: CMakeLists.txt
SourceTest/logicSource/sources/algo/Sudoku/: Sudoku.cpp  Sudoku.h
TestOCR/: ConsoleApplication1.cpp
VisualPrototype/: Header.h  Main.cpp  Solve.cpp  Source.cpp  TrainAndTest.cpp  classifications.xml  gui.cpp  gui.h  gui.ui
vision/vision/: Sudoku.cpp  TrainAndTest.cpp  classifications.xml  images.xml
vision/vision/dzialajace/: Thumbs.db
(+17 files in other folders)
